--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,8 @@
 language: python
 python:
 - "2.7"
+env:
+  - DJANGO_VERSION=1.7.8
+install:
+  - pip install -q Django==$DJANGO_VERSION
+  - python setup.py -q install
